# pyids

./: README.md  error_listing_schema.py  ids_dump.json  pyproject.toml  quick_run.py  requirements.txt  save_ids_dump.py
ids_files/: sample1.ids
src/pyids/: __init__.py  core.py  models.py
src/pyids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_core.py
