[project]
name = "pyids"
version = "0.1.0"
description = "Small helper: read IDS files and expose them as Pydantic models"
readme = "README.md"
authors = [{name="Your Name", email="you@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.0,<3",
]

[project.optional-dependencies]
ifc = ["ifctester"]  # optional extra for users who want parsing/validation

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
